--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,7 +5,7 @@
 
 *, body{
     /* background-color: #F8F3DD; */
-    font-family: "Nunito", "Helvetica Neue";
+    font-family: "Nunito", Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.125rem;
 }
 /* select.filter{
