--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,6 +16,11 @@
     width: 100%;
     height: 100%;
   }
+
+ .about {
+    background-image: url(../assets//images/Herosection.png);
+    background-size: cover;
+ } 
   
  
   
