--- a/src/css/index.css
+++ b/src/css/index.css
@@ -17,5 +17,16 @@
     height: 100%;
   }
   
+  /* Hide scrollbar for Chrome, Safari, and Edge */
+.modal-content::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for Firefox */
+  .modal-content {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
+  
  
   
